# eeg-tools

./: .gitignore  LICENSE  README.md  eeg-dipole  eeg-edit  eeg-genfwd  setup.cfg
eeg-tools/: common.py  eeg-dipole  eeg-edit  eeg-genfwd
eegtools/: common.py  eeg_dipole.py  eeg_edit.py  eeg_genfwd.py
