[metadata]
name = eegtools
version = 0.1.0
author = Alejandro Caravaca Puchades
author_email = acaravacapuchades@gmail.com
description = A set of utilities to work with M/EEG files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/acpuchades/eegtools
project_urls =
	Bug Tracker = https://github.com/acpuchades/eegtools/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
	matplotlib
	mne

[options.entry_points]
console_scripts =
	eeg-dipole = eegtools.eeg_dipole:main
	eeg-edit = eegtools.eeg_edit:main
	eeg-genfwd = eegtools.eeg_genfwd:main